// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconInfo /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 196 256"
    width="0.765625em"
  >
      
    <path
      d="M121 87v99.1c0 8.8 1 14.5 3.1 16.9 2 2.5 6 3.9 11.9 4.2v4.8H70v-4.8c5.5-.2 9.6-1.8 12.3-4.8 1.8-2 2.7-7.5 2.7-16.3v-73c0-8.8-1-14.5-3.1-16.9-2.1-2.5-6-3.9-11.9-4.2v-5h51zm-18.1-59.7c5.8 0 10.6 2 14.6 6.1 4 4 6 8.9 6 14.6 0 5.7-2 10.5-6 14.5s-8.9 6-14.6 6c-5.7 0-10.5-2-14.5-6s-6-8.8-6-14.5c0-5.7 2-10.5 6-14.6s8.8-6.1 14.5-6.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconInfo /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 196 256"
    width="0.765625em"
  >
      
    <path
      d="M121 87v99.1c0 8.8 1 14.5 3.1 16.9 2 2.5 6 3.9 11.9 4.2v4.8H70v-4.8c5.5-.2 9.6-1.8 12.3-4.8 1.8-2 2.7-7.5 2.7-16.3v-73c0-8.8-1-14.5-3.1-16.9-2.1-2.5-6-3.9-11.9-4.2v-5h51zm-18.1-59.7c5.8 0 10.6 2 14.6 6.1 4 4 6 8.9 6 14.6 0 5.7-2 10.5-6 14.5s-8.9 6-14.6 6c-5.7 0-10.5-2-14.5-6s-6-8.8-6-14.5c0-5.7 2-10.5 6-14.6s8.8-6.1 14.5-6.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconInfo /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 196 256"
    width="0.765625em"
  >
      
    <path
      d="M121 87v99.1c0 8.8 1 14.5 3.1 16.9 2 2.5 6 3.9 11.9 4.2v4.8H70v-4.8c5.5-.2 9.6-1.8 12.3-4.8 1.8-2 2.7-7.5 2.7-16.3v-73c0-8.8-1-14.5-3.1-16.9-2.1-2.5-6-3.9-11.9-4.2v-5h51zm-18.1-59.7c5.8 0 10.6 2 14.6 6.1 4 4 6 8.9 6 14.6 0 5.7-2 10.5-6 14.5s-8.9 6-14.6 6c-5.7 0-10.5-2-14.5-6s-6-8.8-6-14.5c0-5.7 2-10.5 6-14.6s8.8-6.1 14.5-6.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconInfo /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 196 256"
    width="0.765625em"
  >
      
    <path
      d="M121 87v99.1c0 8.8 1 14.5 3.1 16.9 2 2.5 6 3.9 11.9 4.2v4.8H70v-4.8c5.5-.2 9.6-1.8 12.3-4.8 1.8-2 2.7-7.5 2.7-16.3v-73c0-8.8-1-14.5-3.1-16.9-2.1-2.5-6-3.9-11.9-4.2v-5h51zm-18.1-59.7c5.8 0 10.6 2 14.6 6.1 4 4 6 8.9 6 14.6 0 5.7-2 10.5-6 14.5s-8.9 6-14.6 6c-5.7 0-10.5-2-14.5-6s-6-8.8-6-14.5c0-5.7 2-10.5 6-14.6s8.8-6.1 14.5-6.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconInfo /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 196 256"
    width="0.765625em"
  >
      
    <path
      d="M121 87v99.1c0 8.8 1 14.5 3.1 16.9 2 2.5 6 3.9 11.9 4.2v4.8H70v-4.8c5.5-.2 9.6-1.8 12.3-4.8 1.8-2 2.7-7.5 2.7-16.3v-73c0-8.8-1-14.5-3.1-16.9-2.1-2.5-6-3.9-11.9-4.2v-5h51zm-18.1-59.7c5.8 0 10.6 2 14.6 6.1 4 4 6 8.9 6 14.6 0 5.7-2 10.5-6 14.5s-8.9 6-14.6 6c-5.7 0-10.5-2-14.5-6s-6-8.8-6-14.5c0-5.7 2-10.5 6-14.6s8.8-6.1 14.5-6.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconInfo /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 196 256"
    width="0.765625em"
  >
      
    <path
      d="M121 87v99.1c0 8.8 1 14.5 3.1 16.9 2 2.5 6 3.9 11.9 4.2v4.8H70v-4.8c5.5-.2 9.6-1.8 12.3-4.8 1.8-2 2.7-7.5 2.7-16.3v-73c0-8.8-1-14.5-3.1-16.9-2.1-2.5-6-3.9-11.9-4.2v-5h51zm-18.1-59.7c5.8 0 10.6 2 14.6 6.1 4 4 6 8.9 6 14.6 0 5.7-2 10.5-6 14.5s-8.9 6-14.6 6c-5.7 0-10.5-2-14.5-6s-6-8.8-6-14.5c0-5.7 2-10.5 6-14.6s8.8-6.1 14.5-6.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconInfo /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 196 256"
    width="0.765625em"
  >
      
    <path
      d="M121 87v99.1c0 8.8 1 14.5 3.1 16.9 2 2.5 6 3.9 11.9 4.2v4.8H70v-4.8c5.5-.2 9.6-1.8 12.3-4.8 1.8-2 2.7-7.5 2.7-16.3v-73c0-8.8-1-14.5-3.1-16.9-2.1-2.5-6-3.9-11.9-4.2v-5h51zm-18.1-59.7c5.8 0 10.6 2 14.6 6.1 4 4 6 8.9 6 14.6 0 5.7-2 10.5-6 14.5s-8.9 6-14.6 6c-5.7 0-10.5-2-14.5-6s-6-8.8-6-14.5c0-5.7 2-10.5 6-14.6s8.8-6.1 14.5-6.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconInfo /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 196 256"
    width="0.765625em"
  >
      
    <path
      d="M121 87v99.1c0 8.8 1 14.5 3.1 16.9 2 2.5 6 3.9 11.9 4.2v4.8H70v-4.8c5.5-.2 9.6-1.8 12.3-4.8 1.8-2 2.7-7.5 2.7-16.3v-73c0-8.8-1-14.5-3.1-16.9-2.1-2.5-6-3.9-11.9-4.2v-5h51zm-18.1-59.7c5.8 0 10.6 2 14.6 6.1 4 4 6 8.9 6 14.6 0 5.7-2 10.5-6 14.5s-8.9 6-14.6 6c-5.7 0-10.5-2-14.5-6s-6-8.8-6-14.5c0-5.7 2-10.5 6-14.6s8.8-6.1 14.5-6.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconInfo /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 196 256"
    width="0.765625em"
  >
      
    <path
      d="M121 87v99.1c0 8.8 1 14.5 3.1 16.9 2 2.5 6 3.9 11.9 4.2v4.8H70v-4.8c5.5-.2 9.6-1.8 12.3-4.8 1.8-2 2.7-7.5 2.7-16.3v-73c0-8.8-1-14.5-3.1-16.9-2.1-2.5-6-3.9-11.9-4.2v-5h51zm-18.1-59.7c5.8 0 10.6 2 14.6 6.1 4 4 6 8.9 6 14.6 0 5.7-2 10.5-6 14.5s-8.9 6-14.6 6c-5.7 0-10.5-2-14.5-6s-6-8.8-6-14.5c0-5.7 2-10.5 6-14.6s8.8-6.1 14.5-6.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconInfo /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 196 256"
    width="0.765625em"
  >
      
    <path
      d="M121 87v99.1c0 8.8 1 14.5 3.1 16.9 2 2.5 6 3.9 11.9 4.2v4.8H70v-4.8c5.5-.2 9.6-1.8 12.3-4.8 1.8-2 2.7-7.5 2.7-16.3v-73c0-8.8-1-14.5-3.1-16.9-2.1-2.5-6-3.9-11.9-4.2v-5h51zm-18.1-59.7c5.8 0 10.6 2 14.6 6.1 4 4 6 8.9 6 14.6 0 5.7-2 10.5-6 14.5s-8.9 6-14.6 6c-5.7 0-10.5-2-14.5-6s-6-8.8-6-14.5c0-5.7 2-10.5 6-14.6s8.8-6.1 14.5-6.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconInfo /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 196 256"
    width="0.765625em"
  >
      
    <path
      d="M121 87v99.1c0 8.8 1 14.5 3.1 16.9 2 2.5 6 3.9 11.9 4.2v4.8H70v-4.8c5.5-.2 9.6-1.8 12.3-4.8 1.8-2 2.7-7.5 2.7-16.3v-73c0-8.8-1-14.5-3.1-16.9-2.1-2.5-6-3.9-11.9-4.2v-5h51zm-18.1-59.7c5.8 0 10.6 2 14.6 6.1 4 4 6 8.9 6 14.6 0 5.7-2 10.5-6 14.5s-8.9 6-14.6 6c-5.7 0-10.5-2-14.5-6s-6-8.8-6-14.5c0-5.7 2-10.5 6-14.6s8.8-6.1 14.5-6.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconInfo /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 196 256"
    width="0.765625em"
  >
      
    <path
      d="M121 87v99.1c0 8.8 1 14.5 3.1 16.9 2 2.5 6 3.9 11.9 4.2v4.8H70v-4.8c5.5-.2 9.6-1.8 12.3-4.8 1.8-2 2.7-7.5 2.7-16.3v-73c0-8.8-1-14.5-3.1-16.9-2.1-2.5-6-3.9-11.9-4.2v-5h51zm-18.1-59.7c5.8 0 10.6 2 14.6 6.1 4 4 6 8.9 6 14.6 0 5.7-2 10.5-6 14.5s-8.9 6-14.6 6c-5.7 0-10.5-2-14.5-6s-6-8.8-6-14.5c0-5.7 2-10.5 6-14.6s8.8-6.1 14.5-6.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
